[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/TaskBarBG.png" type="Texture" id=1]
[ext_resource path="res://assets/Menu Icons/Icon_Barricade-L3_Focus.png" type="Texture" id=2]
[ext_resource path="res://assets/Menu Icons/Icon_Barricade-L3_Normal.png" type="Texture" id=3]
[ext_resource path="res://assets/Menu Icons/Icon_Barricade-L2_Normal.png" type="Texture" id=4]
[ext_resource path="res://assets/Menu Icons/Icon_Barricade-L2_Focus.png" type="Texture" id=5]
[ext_resource path="res://hud/UpgradeMenu.gd" type="Script" id=6]
[ext_resource path="res://fonts/6px_8.tres" type="DynamicFont" id=11]

[node name="UpgradeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -36.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 11.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrapsLabel" type="Label" parent="TextureRect/HBoxContainer"]
margin_top = 1.0
margin_right = 6.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 11 )
text = "$:"
valign = 1

[node name="MineOptions" type="HBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 10.0
margin_right = 54.0
margin_bottom = 10.0

[node name="NoUpgrades" type="Label" parent="TextureRect/HBoxContainer/MineOptions"]
margin_top = 1.0
margin_right = 44.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.298039, 0.298039, 0.298039, 1 )
custom_fonts/font = ExtResource( 11 )
text = "No Upgrades"

[node name="BarricadeOptions" type="HBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 58.0
margin_right = 82.0
margin_bottom = 10.0

[node name="Level2" type="TextureButton" parent="TextureRect/HBoxContainer/BarricadeOptions"]
margin_right = 10.0
margin_bottom = 10.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="Level3" type="TextureButton" parent="TextureRect/HBoxContainer/BarricadeOptions"]
margin_left = 14.0
margin_right = 24.0
margin_bottom = 10.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 2 )

[node name="TurretOptions" type="HBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 86.0
margin_right = 110.0
margin_bottom = 10.0

[node name="Level2" type="TextureButton" parent="TextureRect/HBoxContainer/TurretOptions"]
margin_right = 10.0
margin_bottom = 10.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="Level3" type="TextureButton" parent="TextureRect/HBoxContainer/TurretOptions"]
margin_left = 14.0
margin_right = 24.0
margin_bottom = 10.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 2 )

[node name="LaserOptions" type="HBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 114.0
margin_right = 138.0
margin_bottom = 10.0

[node name="Level2" type="TextureButton" parent="TextureRect/HBoxContainer/LaserOptions"]
margin_right = 10.0
margin_bottom = 10.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="Level3" type="TextureButton" parent="TextureRect/HBoxContainer/LaserOptions"]
margin_left = 14.0
margin_right = 24.0
margin_bottom = 10.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 2 )
